--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </nav>
     </header>
     <main class="container-fluid">
+
         <div class="row my-3">
             <div class="col" id="form">
                 <form onsubmit="app.carsController.createCar()" class="form-inline">
@@ -52,8 +53,84 @@
                 </form>
             </div>
         </div>
+
         <div class="row" id="data">
         </div>
+
+        <div class="row my-3">
+            <div class="col" id="form">
+                <form onsubmit="app.carsController.createHouse()" class="form-inline">
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="bedrooms">Bedrooms</label>
+                        <input type="text" name="bedrooms" id="bedrooms" class="form-control" placeholder="Bedrooms...">
+                    </div>
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="Bathrooms">Bathrooms</label>
+                        <input type="text" name="Bathrooms" id="Bathrooms" class="form-control"
+                            placeholder="Bathrooms...">
+                    </div>
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="levels">Levels</label>
+                        <input type="number" name="levels" id="levels" class="form-control" placeholder="levels..."
+                            min="1900" max="3">
+                    </div>
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="price">Price</label>
+                        <input type="number" name="price" id="price" class="form-control" placeholder="Price...">
+                    </div>
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="description">Description</label>
+                        <input type="text" name="description" id="description" class="form-control"
+                            placeholder="Description...">
+                    </div>
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="img">Image Url</label>
+                        <input type="url" name="img" id="img" class="form-control" placeholder="Image Url...">
+                    </div>
+                    <button type="submit" class="btn btn-outline-success">Add House</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="row" id="houses">
+        </div>
+
+        <div class="row my-3">
+            <div class="col" id="form">
+                <form onsubmit="app.carsController.createJob()" class="form-inline">
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="Company">Company</label>
+                        <input type="text" name="Company" id="Company" class="form-control" placeholder="Company...">
+                    </div>
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="hours"></label>
+                        <input type="text" name="hours" id="hours" class="form-control" placeholder="hours...">
+                    </div>
+
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="rate">rate</label>
+                        <input type="number" name="rate" id="rate" class="form-control" placeholder="rate...">
+                    </div>
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="description">Description</label>
+                        <input type="text" name="description" id="description" class="form-control"
+                            placeholder="Description...">
+                    </div>
+                    <!--
+                    <div class="form-group p-1">
+                        <label class="mr-1" for="imgUrl">Image Url</label>
+                        <input type="url" name="imgUrl" id="imgUrl" class="form-control" placeholder="Image Url...">
+                    </div>
+                -->
+                    <button type="submit" class="btn btn-outline-success">Add Job</button>
+                </form>
+            </div>
+        </div>
+
+        <div class="row" id="jobs">
+        </div>
+
+
     </main>
     <footer class="container-fluid bg-dark text-light">
         <div class="row text-center">
